--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,7 @@
 title: "GIS Capsule Course"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+This is a prototype website to hold teaching materials.
 
 ```{r}
 1 + 1
