--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,8 @@
 ---
-title: "GIS Capsule Course"
+title: "What to Expect"
+about:
+  template: marquee
+  image: images/chalkboard.jpeg
 ---
 
 ## Introduction
